# TACOS-server

./: .gitignore  AUTHORS.md  COPYING  Pipfile  README.md  app.json  init_feeds.sh  package.json  pyproject.toml  webserver.wsgi.example
docs/: conf.py  deployment.rst  index.rst  services.rst
src/: bootstrap.py  manager.py  runserver.py
src/instance/: development.cfg  heroku.cfg  production.cfg.sample
src/scripts/: __init__.py  add_spam.py  feed.py  retrieve_spam.py
src/web/models/: __init__.py  feed.py  report.py  spam.py
src/web/templates/: human.txt  index.html  layout.html  privacy.html
src/web/views/: __init__.py  views.py
src/web/views/api/v1/: __init__.py  feed_set.py  spam.py
