[tool.poetry]
name = "src"
version = "0.1.0"
description = "This application provides back-end services to TACOS."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
flask-restful = "^0.3.9"
psycopg2-binary = "^2.9.5"
flask-script = "^2.0.6"
pymisp = "^2.4.168"
phonenumbers = "^8.13.5"
flask-babel = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
